--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -68,6 +68,12 @@
       <DependentUpon>CheckAvailability.cs</DependentUpon>
     </Compile>
     <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="FindPatient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindPatient.Designer.cs">
+      <DependentUpon>FindPatient.cs</DependentUpon>
+    </Compile>
     <Compile Include="List.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -103,6 +109,9 @@
     </Compile>
     <EmbeddedResource Include="CheckAvailability.resx">
       <DependentUpon>CheckAvailability.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindPatient.resx">
+      <DependentUpon>FindPatient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
